Fix the missing name on mobile view.

--- a/css/layouts/blog.css
+++ b/css/layouts/blog.css
@@ -283,6 +283,7 @@ blockquote p {
 @media (max-width: 767px) {
     menu, ol, ul {
         padding: 0 0 0 14px;
+        margin-left: 5px;
     }
     .brand-title {
         font-size: 36px;
